--- a/nubank/package.json
+++ b/nubank/package.json
@@ -14,7 +14,11 @@
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-qrcode-svg": "^5.2.0",
+    "react-native-svg": "^9.8.4",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^7.0.2",
     "react-navigation": "^3.12.1",
     "reactotron-react-native": "^3.6.5",
     "styled-components": "^4.3.2"
