--- a/nubank/android/app/build.gradle
+++ b/nubank/android/app/build.gradle
@@ -121,7 +121,9 @@ def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-
+    packagingOptions { 
+       pickFirst '** / libjsc.so' 
+    } 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
